#493 - Dependency version updates.